--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+  apiKey: "AIzaSyBcskSM23_0_Va5Y9_ufNYH8FjTZu7ifqs",
+  authDomain: "portait-aop.firebaseapp.com",
+  projectId: "portait-aop",
+  storageBucket: "portait-aop.appspot.com",
+  messagingSenderId: "875453019909",
+  appId: "1:875453019909:web:48bff3acc1a124475da96c"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
